istio/miscellaneous/virtual-service-go-cors.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go-cors
spec:
  hosts:
  - service-go
  http:
  - route:
    - destination:
        host: service-go
    corsPolicy:
      allowOrigin:
      - will.com
      allowMethods:
      - POST
      - GET
      allowCredentials: false
      allowHeaders:
      - X-Custom-Header
      exposeHeaders:
      - X-Foo-Bar
      maxAge: "1d"
