istio/miscellaneous/virtual-service-go-redirect.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go-redirect
spec:
  hosts:
  - service-go
  http:
  - match:
    - uri:
        exact: /v1/env
  redirect:
    uri: /env
    authority: service-go
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go
spec:
  hosts:
  - service-go
  http:
  - route:
    - destination:
        host: service-go
        subset: v1
