istio/miscellaneous/virtual-service-go-rewrite.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-go
spec:
  host: service-go
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-go-rewrite
spec:
  hosts:
  - service-go
  http:
  - match:
    - uri:
        exact: /v1/env
  rewrite:
    uri: /env
  route:
    - destination:
        host: service-go
        subset: v1
