istio/miscellaneous/virtual-service-httpbin-append-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin
  http:
  - appendHeaders:
      X-custom-1: "1"
      X-custom-2: "2"
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
