istio/miscellaneous/virtual-service-tcp-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis-proxy
spec:
  hosts:
  - redis-proxy
  tcp:
  - match:
    - port: 16379
    route:
    - destination:
        host: redis.foo
        port:
          number: 6379
